Add modularization. Added TestFX Added CDI support.